examples/apps/simple-echo/deploy-aws-us-east.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo1
  namespace: echo-app
  labels:
    skycluster.io/managed-by: skycluster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo1
  template:
    metadata:
      labels:
        app-name: echo
        app: echo1
    spec:
      containers:
      - name: echo1
        image: alpine/curl:latest
        command: ["/bin/sh", "-c"]
        args:
          - |
            while true; do
              CONTENT=$(ip route get 8.8.8.8 | awk '{printf "Hey, my ip is: %s,", $7; exit}')
              HOSTNAME=$(hostname)
              CONTENT="$CONTENT\t[VERSION 1]\tHostname: $HOSTNAME"
              CONTENT_LENGTH=$(echo -n "$CONTENT" | wc -c)
              echo -e "HTTP/1.1 200 OK\r\nContent-Length: $CONTENT_LENGTH\r\n\r\n$CONTENT" | nc -l -p 8080
            done
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 0.5
            memory: 512Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo2
  namespace: echo-app
  labels:
    skycluster.io/managed-by: skycluster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo2
  template:
    metadata:
      labels:
        app-name: echo
        app: echo2
    spec:
      containers:
      - name: echo2
        image: alpine/curl:latest
        command: ["/bin/sh", "-c"]
        args:
          - |
            while true; do
              CONTENT=$(ip route get 8.8.8.8 | awk '{printf "Hey, my ip is: %s,", $7; exit}')
              HOSTNAME=$(hostname)
              CONTENT="$CONTENT\t[VERSION 1]\tHostname: $HOSTNAME"
              CONTENT_LENGTH=$(echo -n "$CONTENT" | wc -c)
              echo -e "HTTP/1.1 200 OK\r\nContent-Length: $CONTENT_LENGTH\r\n\r\n$CONTENT" | nc -l -p 8080
            done
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 0.5
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: echo-svc
  namespace: echo-app
  labels:
    skycluster.io/managed-by: skycluster
spec:
  selector:
    app-name: echo
  ports:
    - port: 8080
      targetPort: 8080
---
